--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         <!-- Sid -->
         <div class="bg-black/80 backdrop-blur-lg border-2 border-primary/20 rounded-3xl p-12 text-center hover:-translate-y-2 hover:border-primary hover:shadow-2xl hover:shadow-black/40 transition-all duration-300">
           <div class="w-44 h-44 mx-auto mb-8 rounded-full border-3 border-primary shadow-lg shadow-primary/30 overflow-hidden">
-            <img src="./sid.jpg" alt="Sid - Co-Founder & CEO" class="w-full h-full object-cover">
+            <img src="./sidd.jpg" alt="Sid - Co-Founder & CEO" class="w-full h-full object-cover">
           </div>
           <h3 class="text-3xl font-orbitron text-primary mb-2">Sid</h3>
           <div class="text-accent text-xl font-semibold mb-6">Founder & CEO</div>
